# subnet-worker-client

./: .gitignore  Cargo.toml
abis/: subnet_control_plane_is_active_abi.json  task_queue_poll_abi.json
activity-specs/: video.preprocess.yaml
configs/: local.toml  staging.toml
crates/broadcaster/: Cargo.toml
crates/broadcaster/src/: lib.rs
crates/chain/: Cargo.toml
crates/chain/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/rpc/: Cargo.toml  build.rs
crates/rpc/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: README.md  WCP_SOT.md  WEP_SDK.md
proto/execution/v1/: execution.proto
python-wep-ex/: main.py  main_grpc.py  wep.local.yaml
scripts/: generate_python_stubs.sh
sdks/python/poseidon_wep_sdk_pkg/: __init__.py  pyproject.toml  registry.py  runner.py  server.py  types.py
shared/workflows/: audio_v1_0_0.yaml  video_v1_0_0.yaml  video_v1_1_0.yaml
src/: main.rs
src/components/: assigner.rs  broadcaster.rs  mod.rs  poller.rs
