[workspace]
members = [
  "crates/config",
  "crates/persistence",
  "crates/chain",
  "crates/broadcaster",
  "crates/rpc",
  "crates/storage",
  "crates/scheduler",
  "crates/event",
]
resolver = "2"

[package]
name = "subnet-wcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.15", features = ["toml"] }
humantime-serde = "1.1.1"
alloy = { version = "1.0", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
tonic-health = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
once_cell = "1.21"
hex = "0.4"
url = "2.5.4"
thiserror = "1.0"

# internal crates
subnet-wcp-config = { path = "crates/config" }
subnet-wcp-persistence = { path = "crates/persistence" }
subnet-wcp-chain = { path = "crates/chain" }
subnet-wcp-rpc = { path = "crates/rpc" }
subnet-wcp-storage = { path = "crates/storage" }
subnet-wcp-scheduler = { path = "crates/scheduler" }
subnet-wcp-event = { path = "crates/event" }
subnet-wcp-broadcaster = { path = "crates/broadcaster" }


