[package]
name = "subnet-wcp-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alloy = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

