[package]
name = "subnet-wcp-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alloy = { version = "1.0", features = ["full"] }
alloy-sol-types = "1.0"
alloy-rpc-types-eth = "1.0"
alloy-contract = "1.0"
alloy-network = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

