[package]
name = "subnet-wcp-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
humantime-serde = "1.1.1"
serde_with = { version = "3", features = ["macros"] }
thiserror = "1.0"

