[package]
name = "subnet-wcp-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
tracing = "0.1.41"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"

