[package]
name = "subnet-wcp-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
subnet-wcp-persistence = { path = "../../crates/persistence" }

